--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div>
       <ul id="messages"></ul>
       <form action="">
-        <input id="m" autocomplete="off" /><button>Send</button>
+        <input id="m" autocomplete="off" /><button id="sendMessage">Send</button>
       </form>
     </div>
   </body>
