Added word generation

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
   <body>
     <canvas id="drawing"></canvas>
     <input class="jscolor" id="color_picker"/>
+    <div id="word-options">
+    </div>
     <div>
       <ul id="messages"></ul>
       <form action="">
