Add working users with changes between them for drawing. Also timer for player for counting their time for draw.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
 
   <body>
     <canvas id="drawing"></canvas>
-    <input class="jscolor" id="color_picker"/>
+    <input class="jscolor" id="color_picker" />
+    <input class="username" id="username">
+      <button id="submit_username" onclick="addUsername()"> DO IT </button>
+    </input>
     <div id="word-options">
     </div>
     <div>
