Syncronize timer, made guessing words, make buttons look a bit cooler.

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
     <input class="username" id="username">
       <button id="submit_username" onclick="addUsername()"> DO IT </button>
     </input>
-    <div class="timer" data-timer="90"></div>
-
-    <div id="word-options">
-    </div>
+    <div class="timer" id="timer" data-timer="90"></div>
+    <p id="who_is_drawing"></p>
+    <div id="text3"></div>
+    <div id="word-options"></div>
     <div>
       <ul id="messages"></ul>
       <form action="">
